# prompt-optimizer

./: README.md  README_CN.md  apo.py  pyproject.toml
prompt_optimizer/: __init__.py  analyzer.py  anti_injection.py  cli.py  optimizer.py  scorer.py  utils.py
prompt_optimizer/pro/: __init__.py  ab_generator.py  license.py  model_optimizer.py  rewriter.py
samples/: bad_prompt.txt
tests/: test_basic.py
